test/conformance/kuttl/exceptions/only-for-specific-user/02-exception.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- exception.yaml
assert:
- exception-assert.yaml
