test/conformance/kuttl/exceptions/only-for-specific-user/03-configmap.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: configmap.yaml
  shouldFail: true
