test/conformance/kuttl/exceptions/only-for-specific-user/exception.yaml
apiVersion: kyverno.io/v2alpha1
kind: PolicyException
metadata:
  name: mynewpolex
  namespace: kyverno
spec:
  background: false
  exceptions:
    - policyName: require-labels
      ruleNames:
        - require-team
  match:
    any:
      - resources:
          kinds:
            - ConfigMap
          names:
            - emergency
        subjects:
          - kind: User
            name: chip
